--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ a {
 
 .gradient__text {
     background: var(--gradient-text);
-    brakground-clip: text;
+    background-clip: text;
     -webkit-background-clop: text;
     -webkit-text-fill-color: transparent;
 }
